--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # Created by .gitignore support plugin (hsz.mobi)
 .idea
+twutils/en70.json
+twutils/en70.xml
+twutils/en70_buildings.xml
+twutils/en70_units.xml
+twutils/en70_units.json
+twutils/en70_buildings.json
+twutils/active_servers.xml
+twutils/config.ini
+*.pyc
